--- a/src/component/form.css
+++ b/src/component/form.css
@@ -80,7 +80,7 @@
 
    }
 
-   .button {
+   /* .button {
     margin-top: 1rem;
     background-color: #007bff;
     align-items: center;
@@ -91,9 +91,9 @@
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
-  }
+  } */
    
-  /* button {
+  button {
     background: #4051d0;
     border: none;
     border-radius: 5px;
@@ -108,7 +108,7 @@
     transition: all .3s;
     width: fit-content;
     height: auto;
-  } */
+  }
   
   button:hover {
     background: #3f4048;
